fix : overflow x and scale

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -22,6 +22,25 @@ $dark-disabled-text: rgba($dark-primary-text, 0.38);
 $dark-dividers: rgba($dark-primary-text, 0.12);
 $dark-focused: rgba($dark-primary-text, 0.12);
 
+$fontConfig: (
+  display-4: mat.define-typography-level(100%, 100%, 300, 'Roboto', -0.0134em),
+  display-3: mat.define-typography-level(100%, 100%, 400, 'Roboto', -0.0089em),
+  display-2: mat.define-typography-level(100%, 100%, 400, 'Roboto', 0.0000em),
+  display-1: mat.define-typography-level(100%, 100%, 400, 'Roboto', 0.0074em),
+  headline: mat.define-typography-level(100%, 100%, 400, 'Roboto', 0.0000em),
+  title: mat.define-typography-level(100%, 100%, 500, 'Roboto', 0.0075em),
+  subheading-2: mat.define-typography-level(100%, 100%, 400, 'Roboto', 0.0094em),
+  subheading-1: mat.define-typography-level(100%, 100%, 500, 'Roboto', 0.0067em),
+  body-2: mat.define-typography-level(100%, 100%, 500, 'Roboto', 0.0179em),
+  body-1: mat.define-typography-level(100%, 100%, 400, 'Roboto', 0.0179em),
+  button: mat.define-typography-level(100%, 100%, 500, 'Roboto', 0.0893em),
+  caption: mat.define-typography-level(100%, 100%, 400, 'Roboto', 0.0333em),
+  input: mat.define-typography-level(100%, 1.125, 400, 'Roboto', 1.5px)
+);
+
+// Compute font config
+@include mat.core($fontConfig);
+
 $mat-light-theme-foreground: (
   base:              black,
   divider:           $dark-dividers,
