--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,6 +8,7 @@ html
 body
     height: 100%
     margin: 0
+    overflow-x: hidden
     .mat-icon-button
         height: fit-content
 
